--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,9 @@
 main:
   - title: "Blog"
     url: /blog/
+  - title: "Publication"
+    url: /publication/
   - title: "About"
     url: /about/
-  - title: "External Link"
-    url: https://google.com
+  # - title: "External Link"
+  #   url: https://google.com
