Hide un-ready articles

--- a/_config.yml
+++ b/_config.yml
@@ -323,3 +323,9 @@ defaults:
 
 # 定时发布！ 如果 future: false
   # https://mycyberuniverse.com/jekyll-post-not-showing-up.html
+
+
+# Cheat sheet
+# http://nestacms.com/docs/creating-content/markdown-cheat-sheet
+
+
