--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "mint"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Still under building"
+title                    : ""
 title_separator          : "-"
 name                     : "Jiahao Chen"
 description              : "Jiahao Chen's blog."
@@ -25,7 +25,7 @@ url                      : #"https://horychen.github.io" # the base hostname & p
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/SolidWorks_Prototype_Qs24Qr32PS.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 100
